2005-08-06  Diego Gonzalez <diego@pemas.net>

	* gnome-about-me-password.c (update_password): change signature and
	  handle error conditions from passwd.
	  (passdlg_process_response): adapt to changes in update_password
	  to show the error strings returned.
	
	Fixes bug 312092.

2005-08-06  Diego Gonzalez <diego@pemas.net>

	* gnome-about-me-password.c (gnome_about_me_password): avoid using
	  gtk_main and use gtk_dialog_run instead.
	  (passdlg_button_clicked_cb): rename to passdlg_process_response
	  (spawn_passwd): return a value, so that we can see if we need to
	  exit without using gtk_main_quit
	  (wait_child) avoid use of gtk_main_quit. More work is required on
	  this case, but for now it will be enough.

	Fixes bugs 312580 and 309736.	  	

2005-07-16  Diego Gonzaler <diego@pemas.net>

	* gnome-about-me.c (about_me_image_clicked_cb): change the order
	  of the buttons to match the HIG.

	  Patch by Denis Cranston. Fixes bug 309632.

2005-07-12  Dennis Cranston <dennis_cranston at yahoo com>

	* gnome-about-me-password.c (passdlg_check_password_timeout_cb):
	  Set a default message. Use g_strconcat() instead of g_strdup()
	  and mark strings for translation; (gnome_about_me_password):
	  Set the window icon.

	* gnome-about-me.glade:  Rearrange the change password dialog.
	  Relabel the ok button to 'Change Password'.

	Closes bug 310307

2005-07-16  Diego Gonzalez  <diego@pemas.net>

        * Makefile.am: Don't build e-util-marshal, as we can use
          the glib marshallers.
        * e-image-chooser.c: (e_image_chooser_class_init): Use standard
          glib marshallers.
        * gnome-about-me.c: (about_me_focus_out),
          (about_me_get_address_field), (about_me_setup_dialog): Add some
          error checking.

        Patch by James Bowes.

2005-07-13  Sebastien Bacher  <seb128@debian.org>

	* .cvsignore: new file.

2005-07-13  Diego Gonzalez  <diego@pemas.net>

	* gnome-about-me.c (about_me_update_photo): change the maxium width